# customisation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
inc/: customisation.hpp
inc/customisation/: checker.hpp  cli.hpp  component.hpp  configuration.hpp  entity.hpp  error.hpp  file.hpp  io.hpp  parameter.hpp  sfinae.hpp  socket.hpp  storage.hpp  traits.hpp  translator.hpp
mk/: FindReadline.cmake  cxx-flag-rules.cmake
src/: checker.cpp  checker.tpl.hpp  cli.cpp  component.cpp  configuration.cpp  entity.cpp  io.cpp  log.hpp  parameter.cpp  parameter.tpl.hpp  socket.cpp  storage.cpp  storage.tpl.hpp  translator.cpp  translator.tpl.hpp  types.cpp  types.hpp
tpl/: customisation.hpp.in  customisation.pc.in
tst/: checker.cpp  entity.cpp  storage.cpp  translator.cpp
